# jayshitchkv2

./: .replit  pnpm-lock.yaml  pyproject.toml  replit.md
hitchk-app/: .dockerignore  .env.example  .gitattributes  .gitignore  .replit  API_DOCUMENTATION.md  CPANEL_DEPLOY_GUIDE.md  Dockerfile  data_snapshot.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  railway.json  railway_backend.py  replit.md  requirements.txt  tailwind.config.ts  test_sfs2x.js  test_sfs2x_final.cjs  vercel.json  vite.config.ts
hitchk-app/bot/: aviator.py  banned_users.json  bot.py  bot_settings.json  captcha_solver.py  cc.txt  charged_ccs.json  check_member.py  config.json  curl_compat.py  daily_usage.json  env_config.py  found_gates.json  gateways.py  get_user_info.py  hitter_history.json  keys.json  pending_stealer.json  premium.json  proxy.txt  proxy_scraper.py  razorpay_config.json  referrals.json  response_mask.py  saved_bins.json  scraper_session_api.py  send_invoice.py  send_otp.py  setup_scraper_session.py  skool_accounts.json  skool_status.json  tools.py  user_hitter_prefs.json  user_proxies.json  user_sites.json  user_skool_accounts.json  user_tiers.json  users.json  web_account_checker.py  web_check_skool.py  (+12 more)
hitchk-app/client/: index.html
hitchk-app/cpanel-deploy/: .env.example  .htaccess  app.js  guide.md  package.json  requirements.txt
hitchk-app/script/: deploy-build.sh
hitchk-app/scripts/: export_data.js  import_data.js  inspect-mirror.mjs
hitchk-app/server/: botManager.ts  db.ts  env-config.ts  index.ts  json-persistence.ts  (+2 more)
(+135 files in other folders)
