[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.14.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pycryptodome>=3.23.0",
    "pyjwt>=2.12.1",
    "requests>=2.32.5",
    "telethon>=1.42.0",
]
