[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.14.0",
    "duckduckgo-search>=8.1.1",
    "h2>=4.3.0",
    "httpx[http2]>=0.28.1",
    "playwright>=1.58.0",
    "pycryptodome>=3.23.0",
    "pyjwt>=2.11.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "telethon>=1.42.0",
    "user-agent>=0.1.14",
    "uv>=0.10.9",
    "websocket-client>=1.9.0",
]
